<resources>
    <string name="app_name">Ocusell</string>
    <string name="login_txt">Login</string>
    <string name="no_acount_txt">Don\'t have an account? Create Account</string>
    <string name="facebook_login">Login with facebook</string>
    <string name="google_plus_login">Login with Google+</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="signup_txt">Sign Up</string>
    <string name="already_acount_txt">Already have an account? Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="create_account">Create Account</string>
    <string name="create_new_project">Create New Project</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="create_a_project">+ Create a Project</string>
    <string name="project_name">Project Name</string>
    <string name="share">Share</string>
    <string name="projects">Projects</string>
    <string name="delete">delete</string>
    <string name="panaroma_image">Panaroma Image</string>
    <string name="done">Done</string>
    <string name="are_you_sure_you_want_to_delete_this_photo">Are you sure you want to delete this photo?</string>
    <string name="crop_image">Crop Panaroma</string>
    <string name="panaroma">Panaroma</string>
</resources>
