<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/normal_filter_button">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            android:gravity="center"
            android:text="@string/create_new_project"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="@dimen/sp_17" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_project_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:textSize="@dimen/sp_14"
                android:hint="@string/project_name"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_project_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:textSize="@dimen/sp_14"
                android:hint="@string/description"
                android:inputType="textEmailAddress" />

            <ScrollView
                android:id="@+id/scrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true">

                <ExpandableListView
                    android:id="@+id/list_exp_categories"
                    android:background="@drawable/project_category_bg"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_16"
                    android:layout_marginLeft="@dimen/dp_4"
                    android:layout_marginRight="@dimen/dp_4"
                    android:layout_width="match_parent"/>

            </ScrollView>

            <EditText
                android:id="@+id/et_category_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="@dimen/dp_16"
                android:textSize="@dimen/sp_14"
                android:hint="@string/description"
                android:inputType="textEmailAddress" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="@dimen/dp_8"
                android:layout_marginLeft="@dimen/dp_8"
                android:background="@android:color/black"
                android:alpha="50"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel_project"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:background="@android:color/transparent"
                    android:textColor="@android:color/black"
                    android:textAllCaps="false"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black"
                    android:alpha="50"/>

                <Button
                    android:id="@+id/btn_create_project"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_weight="1"
                    android:textColor="@color/colorAccent"
                    android:text="@string/create"
                    android:textAllCaps="false"
                    android:background="@android:color/transparent"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>