<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/normal_filter_button">

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:gravity="center"
            android:paddingLeft="@dimen/dp_20"
            android:visibility="gone"
            android:paddingRight="@dimen/dp_20"
            android:text="@string/reset_password"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_13" />

        <TextView
            android:id="@+id/tv_msg_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/dp_4"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:text="@string/reset_password"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_14" />

        <LinearLayout
            android:layout_marginTop="@dimen/dp_30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginRight="@dimen/dp_8"
                android:layout_marginLeft="@dimen/dp_8"
                android:background="@android:color/black"
                android:alpha="50"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:background="@android:color/transparent"
                    android:textColor="@color/alert_cancel_text_color"
                    android:textAllCaps="false"/>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/black"
                    android:alpha="50"/>

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_40"
                    android:layout_weight="1"
                    android:textColor="@color/login_text_color_green"
                    android:text="@string/send"
                    android:textAllCaps="false"
                    android:background="@android:color/transparent"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>